fix profile and status styles. fix message overflow bug

--- a/node/src/app/header/header.component.css
+++ b/node/src/app/header/header.component.css
@@ -5,3 +5,9 @@
 .app-pointer {
   cursor: pointer !important;
 }
+
+.app-scrollable-menu {
+  height: auto;
+  max-height: 500px;
+  overflow-x: hidden;
+}
